rpi5/smokeping/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: smokeping
  labels:
    app: smokeping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smokeping
  serviceName: smokeping
  template:
    metadata:
      name: smokeping
      labels:
        app: smokeping
    spec:
      containers:
        - name: smokeping
          image: lscr.io/linuxserver/smokeping:2.8.2@sha256:6ab8ea2fb29ea28ed546b48731177fc8f69296de0163017810e56e9428439e0e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /smokeping/
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /smokeping/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: configmap
          configMap:
            name: smokeping-config
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: config
        labels:
          app: smokeping
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Mi
    - metadata:
        name: data
        labels:
          app: smokeping
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
