rpi5/smokeping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
spec:
  selector:
    app: smokeping
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
