rpi5/smokeping/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: smokeping
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`smokeping.local`) || Host(`smokeping.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: smokeping
          port: 80
  tls:
    secretName: smokeping-cert-tls
    domains:
      - main: smokeping.local
        sans:
          - smokeping.internal
